--- a/properties/application.properties
+++ b/properties/application.properties
@@ -1,8 +1,10 @@
 url = https://amazon.in
-username=yourusername
-password=urpassword
+
+username=EnterYourUserNamehere
+password=EnterYourPassword
+
 browser=chrome
+profile=Profile 5
 
-
-
+login=yes
 #test
